bf21 work: fix treasure chest messages